tests/unsafe_getters_setters/unsafe_getters_setters.exp
Error: unsafe_getters_setters.js:6
  6:   get a() { return 4; },
       ^^^^^^^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:7
  7:   set b(x: number) { this.c = x; },
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:12
 12:   get a() { return 4; }
       ^^^^^^^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:13
 13:   set b(x: number) { this.c = x; }
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:18
 18:   get a(): number,
       ^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:19
 19:   set b(x: number): void,
       ^^^^^^^^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:24
 24:   get a(): number;
       ^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:25
 25:   set b(x: number): void;
       ^^^^^^^^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:31
 31:   get b(): number;
       ^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe

Error: unsafe_getters_setters.js:32
 32:   set c(x: number): void;
       ^^^^^^^^^^^^^^^^^^^^^^ unsafe-getters-setters: Getters and Setters can have side effects and are unsafe


Found 10 errors
